html & css udpate

--- a/406.html
+++ b/406.html
@@ -1,34 +1,62 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href ="406.css" type ="text/css" rel = "stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">     
+	 <link href ="406.css" type ="text/css" rel = "stylesheet" />
         <title> App </title>
     </head>
     <body>
         <div class = "menu">
-        <a href = "index.html"><div class = "button">
+        <a href = "406.html"><div class = "button">
                 Main
             </div> </a>
-            <a href="intro.html"><div class = "button">
+            <a href="reports.html"><div class = "button">
                 Reports
             </div> </a>
-            <a href="install.html"><div class = "button">
+            <a href="profile.html"><div class = "button">
                 Profile
             </div> </a>
-            <a href="tutorial.html"><div class = "button">
+            <a href="faq.html"><div class = "button">
                 FAQ
             </div></a>
-            <div class = "button">
+            <a href="contact.html"><div class = "button">
                 Contact Us
-            </div>
-            <a href="rating.html"><div class = "button">
+            </div></a>
+            <a href="friend.html"><div class = "button">
                 Tell A Friend
             </div></a>
-            <a href="credits.html"><div class = "button">
+            <a href="vote.html"><div class = "button">
                 Vote
             </div></a>
+			
         </div>
-        <br>    
+        
+	    <img id = "pic" src = "http://www1.toronto.ca/City%20Of%20Toronto/Solid%20Waste%20Management%20Services/8%20Images/Mayors%20Towering%20Challenge/City%20of%20Toronto.gif" width = "150" height = "100">
+		<img id = "torontoLand" src = "http://www.collinsbarrow.com/uploads/images/feature/ontario/toronto/Toronto_Skyline.jpg" width = "100%" height = "350px">
+		
+		
+		<div class = "main">
+		
+		<pre>
+CYPRESS is a government run system which allows citizens
+to report concerns within their neighbourhood, in an easy 
+and formal way. When you use CYPRESS, you will feel safe 
+knowing that your concerns are heard immediately. 
 
+
+		</pre>
+		
+		<h2 id = "bolded"> HAPPENIING IN YOUR AREA NOW: </h2>
+		<pre>
+Jane & Wilson: Car Robbery - white Ford Focus. 2001. Liscence Plate - XXX 5555
+Yonge & Dundas: Water Main Break - Yonge Street closed for maintence until further notice.
+		</pre>
+		</div>
+		
     </body>
     </html>
+	
+	
+	
+
