updated main page

--- a/406.html
+++ b/406.html
@@ -33,26 +33,37 @@
         </div>
         
 	    <img id = "pic" src = "http://www1.toronto.ca/City%20Of%20Toronto/Solid%20Waste%20Management%20Services/8%20Images/Mayors%20Towering%20Challenge/City%20of%20Toronto.gif" width = "150" height = "100">
-		<img id = "torontoLand" src = "http://www.collinsbarrow.com/uploads/images/feature/ontario/toronto/Toronto_Skyline.jpg" width = "100%" height = "350px">
+		<img id = "torontoLand" src = "http://www.collinsbarrow.com/uploads/images/feature/ontario/toronto/Toronto_Skyline.jpg" width = "100%" height = "450px">
 		
 		
 		<div class = "main">
 		
-		<pre>
-CYPRESS is a government run system which allows citizens
-to report concerns within their neighbourhood, in an easy 
-and formal way. When you use CYPRESS, you will feel safe 
-knowing that your concerns are heard immediately. 
-
+		<pre id="block2">
+													CYPRESS is a government run system which allows citizens
+													to report concerns within their neighbourhood, in an easy 
+													and formal way. When you use CYPRESS, you will feel safe 
+													knowing that your concerns are heard immediately. Start
+													now and fill out our survey.
+			
 
 		</pre>
 		
 		<h2 id = "bolded"> HAPPENIING IN YOUR AREA NOW: </h2>
-		<pre>
+		<pre id="block1">
 Jane & Wilson: Car Robbery - white Ford Focus. 2001. Liscence Plate - XXX 5555
 Yonge & Dundas: Water Main Break - Yonge Street closed for maintence until further notice.
 		</pre>
+		
+			
+		
+		
+		<a href="reports.html"><div id = "reportLink" class = "button">
+                Submit Your Report
+            </div> </a>
+		
 		</div>
+		
+	
 		
     </body>
     </html>
