page1, vote, and others updated
8=====D

--- a/406.html
+++ b/406.html
@@ -11,7 +11,7 @@
         <a href = "406.html"><div class = "button">
                 Main
             </div> </a>
-            <a href="reports.html"><div class = "button">
+            <a href="page1.php"><div class = "button">
                 Reports
             </div> </a>
             <a href="profile.html"><div class = "button">
@@ -48,16 +48,19 @@
 
 		</pre>
 		
-		<h2 id = "bolded"> HAPPENIING IN YOUR AREA NOW: </h2>
+		<h2> HAPPENIING IN YOUR AREA NOW: </h2>
 		<pre id="block1">
 Jane & Wilson: Car Robbery - white Ford Focus. 2001. Liscence Plate - XXX 5555
 Yonge & Dundas: Water Main Break - Yonge Street closed for maintence until further notice.
+Vodden & Kennedy: Falling Ice Warning - side walk closed off until further notice.
+Yonge & Sheppard: Suspicious Activity - made aware to police.
+Bovaird & McLaughlin: Car Accident - made aware to police.
 		</pre>
 		
 			
 		
 		
-		<a href="reports.html"><div id = "reportLink" class = "button">
+		<a href="page1.php"><div id = "reportLink" class = "button">
                 Submit Your Report
             </div> </a>
 		
