rough draft of all files

--- a/contactUs.html
+++ b/contactUs.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
+	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">     
 	<link href ="FAQ.css" type ="text/css" rel = "stylesheet" />
  <head>
-        <div class = "menu">
-        <a href = "index.html"><div class = "button">
+         <div class = "menu">
+        <a href = "406.html"><div class = "button">
                 Main
             </div> </a>
-            <a href="intro.html"><div class = "button">
+            <a href="page1.php"><div class = "button">
                 Reports
             </div> </a>
-            <a href="install.html"><div class = "button">
+            <a href="EditProfile.html"><div class = "button">
                 Profile
             </div> </a>
             <a href="FAQ.html"><div class = "button">
@@ -17,14 +19,16 @@
             </div></a>
             <a href="contactUs.html"><div class = "button">
                 Contact Us
-            </div>
-            <a href="rating.html"><div class = "button">
+            </div></a>
+            <a href="TellaFriend.html"><div class = "button">
                 Tell A Friend
             </div></a>
-            <a href="credits.html"><div class = "button">
+            <a href="vote.html"><div class = "button">
                 Vote
             </div></a>
+			
         </div>
+        
         <br>   		
 </head>
 <br>  
