--- a/page1.html
+++ b/page1.html
@@ -67,29 +67,31 @@
     </script>
   </head>
   <body>
-   <div class = "menu">
-        <a href = "index.html"><div class = "button">
+    <div class = "menu">
+        <a href = "406.html"><div class = "button">
                 Main
             </div> </a>
-            <a href="intro.html"><div class = "button">
+            <a href="page1.php"><div class = "button">
                 Reports
             </div> </a>
-            <a href="install.html"><div class = "button">
+            <a href="EditProfile.html"><div class = "button">
                 Profile
             </div> </a>
             <a href="FAQ.html"><div class = "button">
                 FAQ
             </div></a>
-            <div class = "button">
+            <a href="contactUs.html"><div class = "button">
                 Contact Us
-            </div>
-            <a href="Friend.html"><div class = "button">
+            </div></a>
+            <a href="TellaFriend.html"><div class = "button">
                 Tell A Friend
             </div></a>
-            <a href="Vote.html"><div class = "button">
+            <a href="vote.html"><div class = "button">
                 Vote
             </div></a>
+			
         </div>
+        
         <br>    
     <div id="map"></div>
   <div id = "input area" align="center">
