--- a/EditProfile.html
+++ b/EditProfile.html
@@ -7,29 +7,31 @@
         <title> Profile </title>
     </head>
     <body>
-        <div class = "menu">
-        <a href = "index.html"><div class = "button">
+       <div class = "menu">
+        <a href = "406.html"><div class = "button">
                 Main
             </div> </a>
-            <a href="intro.html"><div class = "button">
+            <a href="page1.php"><div class = "button">
                 Reports
             </div> </a>
-            <a href="Profile.html"><div class = "button">
+            <a href="EditProfile.html"><div class = "button">
                 Profile
             </div> </a>
-            <a href="tutorial.html"><div class = "button">
+            <a href="FAQ.html"><div class = "button">
                 FAQ
             </div></a>
-            <div class = "button">
+            <a href="contactUs.html"><div class = "button">
                 Contact Us
-            </div>
-            <a href="rating.html"><div class = "button">
+            </div></a>
+            <a href="TellaFriend.html"><div class = "button">
                 Tell A Friend
             </div></a>
-            <a href="credits.html"><div class = "button">
+            <a href="vote.html"><div class = "button">
                 Vote
             </div></a>
+			
         </div>
+        
 
         <div class = "main-content">
             <form method = "post" action = "Profile.php">
