--- a/FAQ.html
+++ b/FAQ.html
@@ -3,29 +3,31 @@
 <html>
 	<link href ="FAQ.css" type ="text/css" rel = "stylesheet" />
  <head>
-        <div class = "menu">
+      <div class = "menu">
         <a href = "406.html"><div class = "button">
                 Main
             </div> </a>
-            <a href="intro.html"><div class = "button">
+            <a href="page1.php"><div class = "button">
                 Reports
             </div> </a>
-            <a href="Profile.html"><div class = "button">
+            <a href="EditProfile.html"><div class = "button">
                 Profile
             </div> </a>
-            <div class = "button">
+            <a href="FAQ.html"><div class = "button">
                 FAQ
             </div></a>
             <a href="contactUs.html"><div class = "button">
                 Contact Us
-            </div>
-            <a href="rating.html"><div class = "button">
+            </div></a>
+            <a href="TellaFriend.html"><div class = "button">
                 Tell A Friend
             </div></a>
-            <a href="credits.html"><div class = "button">
+            <a href="vote.html"><div class = "button">
                 Vote
             </div></a>
+			
         </div>
+        
         <br>    
 </head>
 <body1>
