--- a/TellaFriend.html
+++ b/TellaFriend.html
@@ -23,28 +23,30 @@
 </head>
 <body>
     <div class = "menu">
-    <a href = "index.html"><div class = "button">
-            Main
-        </div> </a>
-        <a href="intro.html"><div class = "button">
-            Reports
-        </div> </a>
-        <a href="install.html"><div class = "button">
-            Profile
-        </div> </a>
-        <a href="tutorial.html"><div class = "button">
-            FAQ
-        </div></a>
-        <div class = "button">
-            Contact Us
+        <a href = "406.html"><div class = "button">
+                Main
+            </div> </a>
+            <a href="page1.php"><div class = "button">
+                Reports
+            </div> </a>
+            <a href="EditProfile.html"><div class = "button">
+                Profile
+            </div> </a>
+            <a href="FAQ.html"><div class = "button">
+                FAQ
+            </div></a>
+            <a href="contactUs.html"><div class = "button">
+                Contact Us
+            </div></a>
+            <a href="TellaFriend.html"><div class = "button">
+                Tell A Friend
+            </div></a>
+            <a href="vote.html"><div class = "button">
+                Vote
+            </div></a>
+			
         </div>
-        <a href="TellaFriend.html"><div class = "button">
-            Tell A Friend
-        </div></a>
-        <a href="credits.html"><div class = "button">
-            Vote
-        </div></a>
-    </div>
+        
     <br><br><br><br><br><br>
 	<div class="container" align="center">
 <label for="subject">Send a message to a friend!</label>
