final for nigel

--- a/vote.html
+++ b/vote.html
@@ -3,7 +3,10 @@
     <head>
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">     
-	<script type="text/javascript" src="script.js"></script>
+	<script type="text/javascript" src="script.js" > 
+	
+	
+	</script>
 	<link href ="406.css" type ="text/css" rel = "stylesheet" />
         <title> App </title>
     </head>
@@ -45,7 +48,7 @@
         <input id="qty" value="0" />
         <button id="down" onclick="modify_qty(-1)">-1</button>
         <button id="up" onclick="modify_qty(1)">+1</button>
-		<button id="enter" onclick="modify_qty(-5)">ENTER</button>
+		<button id="enter" onclick="modify_qty(-5) ">ENTER</button>
     </div>
 	
 		  <pre> 
@@ -63,7 +66,7 @@ Missing Husky last seen near Yonge and Dundas.
         <input id="qty1" value="0" />
         <button id="down" onclick="modify_qty1(-1)">-1</button>
         <button id="up" onclick="modify_qty1(1)">+1</button>
-		<button id="enter" onclick="modify_qty1(-5)">ENTER</button>
+		<button id="enter" onclick="modify_qty1(-10)">ENTER</button>
     </div>
 	  
 	</div>
