--- a/vote.html
+++ b/vote.html
@@ -3,31 +3,28 @@
     <head>
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Bhaina" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">     
-	<script type="text/javascript" src="script.js" > 
-	
-	
-	</script>
+	<script type="text/javascript" src="script.js"></script>
 	<link href ="406.css" type ="text/css" rel = "stylesheet" />
         <title> App </title>
     </head>
     <body>
-         <div class = "menu">
+        <div class = "menu">
         <a href = "406.html"><div class = "button">
                 Main
             </div> </a>
-            <a href="page1.php"><div class = "button">
+            <a href="reports.html"><div class = "button">
                 Reports
             </div> </a>
-            <a href="EditProfile.html"><div class = "button">
+            <a href="profile.html"><div class = "button">
                 Profile
             </div> </a>
-            <a href="FAQ.html"><div class = "button">
+            <a href="faq.html"><div class = "button">
                 FAQ
             </div></a>
-            <a href="contactUs.html"><div class = "button">
+            <a href="contact.html"><div class = "button">
                 Contact Us
             </div></a>
-            <a href="TellaFriend.html"><div class = "button">
+            <a href="friend.html"><div class = "button">
                 Tell A Friend
             </div></a>
             <a href="vote.html"><div class = "button">
@@ -35,7 +32,6 @@
             </div></a>
 			
         </div>
-        
         
 		
 	  <div class = "votePage">
@@ -48,7 +44,7 @@
         <input id="qty" value="0" />
         <button id="down" onclick="modify_qty(-1)">-1</button>
         <button id="up" onclick="modify_qty(1)">+1</button>
-		<button id="enter" onclick="modify_qty(-5) ">ENTER</button>
+		<button id="enter" onclick="modify_qty(-5)">ENTER</button>
     </div>
 	
 		  <pre> 
@@ -66,7 +62,7 @@ Missing Husky last seen near Yonge and Dundas.
         <input id="qty1" value="0" />
         <button id="down" onclick="modify_qty1(-1)">-1</button>
         <button id="up" onclick="modify_qty1(1)">+1</button>
-		<button id="enter" onclick="modify_qty1(-10)">ENTER</button>
+		<button id="enter" onclick="modify_qty1(-5)">ENTER</button>
     </div>
 	  
 	</div>
