Last minute fixes

--- a/Login.html
+++ b/Login.html
@@ -16,10 +16,10 @@
 	<br>
 <form action="406.html" method="post">
 	Username:<br>
-	<input type="text" name="username">
+	<input type="text" required name="username">
 <br>
 	Password:<br>
-	<input type="text" name="password">
+	<input type="password" required= name="password">
 <br><br>
 <input type="submit" value="Login">
 </form>
